Cleaner layout fix that doesn't leave gaps to the left and right of the canvases: Change grid container proportions so that contents also take on those slightly taller than wide proportions and make sure that the captions show.

--- a/app.css
+++ b/app.css
@@ -52,7 +52,7 @@ a:visited {
 }
 
 #piece-grid {
-  width: 100vmin;
+  width: 90vmin;
   height: 100vmin;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -60,7 +60,6 @@ a:visited {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  border: solid 1px #444;
 }
 
 #piece-grid > * {
@@ -68,8 +67,8 @@ a:visited {
 }
 
 .piece-info {
-  justify-content: space-between;
   display: flex;
+  justify-content: space-between;
   min-height: 3em;
 }
 
